--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.3.6",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.12",
-    "tailwindcss": "^2.1.1",
+    "tailwindcss": "^2.1.2",
     "vite": "^2.1.5"
   }
 }
