--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
     "axios": "^0.21.1",
+    "mysql2": "^2.2.5",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.3.6",
@@ -18,6 +19,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.12",
+    "prisma": "^2.22.1",
     "tailwindcss": "^2.1.2",
     "vite": "^2.1.5"
   }
